--- a/adopcion.html
+++ b/adopcion.html
@@ -12,7 +12,8 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -20,7 +21,7 @@
       <nav>
         <ul>
           <li class="logo">
-            <a href="index.html"><img src="img/logo.avif" alt="" /></a>
+            <a href="index.html"><img src="assets/img/logo.avif" alt="" /></a>
           </li>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="productos.html">Productos</a></li>
