se añadio la informacion de contactos y sobre nostros

--- a/nosotros.html
+++ b/nosotros.html
@@ -33,24 +33,28 @@
         </ul>
       </nav>
     </header>
-    <h1>Nosotros</h1>
-    <menu>
-      <h4>Nuestro equipo</h4>
+    <section class="nosotros">
+      <h1>Sobre nosotros</h1>
       <p>
-        Este es el equipo de trabajo dedicado a brindar servicios de calidad a
-        nuestros clientes.
+        Somos una empresa dedicada al cuidado y bienestar de las mascotas,
+        comprometida con ofrecer productos y servicios que mejoren la vida de
+        los animales y sus dueño. <br />
+        Nuestro propósito es crear un espacio confiable donde las personas
+        puedan encontrar todo lo necesario para el cuidado de sus mascotas,
+        desde productos esenciales hasta servicios especializados, siempre
+        priorizando la comodidad, la seguridad y el bienestar animal. <br />
+        Creemos que las mascotas son parte de la familia, por eso trabajamos con
+        responsabilidad, cariño y atención al detalle, buscando brindar una
+        experiencia agradable y cercana a cada cliente.
       </p>
-      <img src="assets/img/carga.avif" alt="" />
-      <img src="assets/img/carga.avif" alt="" />
-      <img src="assets/img/carga.avif" alt="" />
-
-      <h4>Objetivos</h4>
-      <p>
-        Brindar servicios de calidad a nuestros clientes y satisfacer sus
-        necesidades.
-      </p>
-      <span> </span>      
-    </menu>
+      <ul class="valores">
+        Nuestros valores
+        <li>Amor y respeto por los animales</li>
+        <li>Calidad y responsabilidad</li>
+        <li>Atención cercana y confiable</li>
+        <li>Compromiso con el bienestar animal</li>
+      </ul>
+    </section>
     <footer>
       <p>Derechos reservados © 2025</p>
     </footer>
