--- a/contacto.html
+++ b/contacto.html
@@ -33,21 +33,24 @@
         </ul>
       </nav>
     </header>
-    <h1>Contacto</h1>
-    <section class="formulario">
-      <form action="">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required />
-
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required />
-
-        <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
-
-        <button type="submit">Enviar</button>
-      </form>
+    <h2>Contacto</h2>
+    <section class="contacto">
+      <p>
+        Estamos aquí para ayudarte, si tienes preguntas, deseas mas información
+        sobre nuestros productos o servicios, o necesitas asesoría sobre tu
+        mascota, no dudes en comunicarte con nosotros <br />
+        Nuestro equipo estará encantado de atenderte y brindarte una respuesta
+        oportuna.
+      </p>
+      <ul class="informacion">
+        <h3>Información de contacto</h3>
+        <li><strong>Email:</strong>6uK5Q@example.com</li>
+        <li><strong>Teléfono:</strong> 123-456-789</li>
+        <li><strong>Horario de atención:</strong> Lunes a Sábado, de 09:00 a.m. - 06:00 p.m.</li>
+        <li><strong>Ubicación:</strong>Colombia</li>
+      </ul>
     </section>
+    
     <footer>
       <p>Derechos reservados © 2025</p>
     </footer>
