adicion de información en pagina de inicio y arreglo de productos

--- a/adopcion.html
+++ b/adopcion.html
@@ -30,6 +30,7 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="nosotros.html">Sobre nosotros</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="#">🛒</a></li>
         </ul>
       </nav>
     </header>
