--- a/contacto.html
+++ b/contacto.html
@@ -30,6 +30,7 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="nosotros.html">Sobre nosotros</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="#">🛒</a></li>
         </ul>
       </nav>
     </header>
@@ -46,11 +47,14 @@
         <h3>Información de contacto</h3>
         <li><strong>Email:</strong>6uK5Q@example.com</li>
         <li><strong>Teléfono:</strong> 123-456-789</li>
-        <li><strong>Horario de atención:</strong> Lunes a Sábado, de 09:00 a.m. - 06:00 p.m.</li>
+        <li>
+          <strong>Horario de atención:</strong> Lunes a Sábado, de 09:00 a.m. -
+          06:00 p.m.
+        </li>
         <li><strong>Ubicación:</strong>Colombia</li>
       </ul>
     </section>
-    
+
     <footer>
       <p>Derechos reservados © 2025</p>
     </footer>
