--- a/productos.html
+++ b/productos.html
@@ -31,6 +31,7 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="nosotros.html">Sobre nosotros</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="#">🛒</a></li>
         </ul>
       </nav>
     </header>
@@ -45,9 +46,6 @@
           <p>Gatos</p>
         </li>
         <li>
-        <li>
-          <p>Aves</p>
-        </li>
           <p>Juguetes</p>
         </li>
         <li>
@@ -59,201 +57,176 @@
       </ul>
       <hr />
     </div>
-    <section class="productos">
-      <ul>
-        <li>
-          <h2>Alimentos</h2>
-          <img src="assets/img/productos/balancedogfoof.png" alt="" />
-        </li>
-        <li>
-          <h2>Alimentos</h2>
-          <img src="assets/img/productos/dogchow.webp" alt="" />
-        </li>
-        <li>
-          <h2>Alimentos</h2>
-          <img src="assets/img/productos/pedigreedog.webp" alt="" />
-        </li>
-        <li>
-          <h2>Alimentos</h2>
-          <img src="" alt="" />
-        </li>
-        <li>
-          <h2>Alimentos</h2>
-          <img src="" alt="" />
-        </li>
-      </ul>
-      <hr />
-      <ul class="juguetes">
-        <li>
-          <h4>Juguetes</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Juguetes</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Juguetes</h4>
-          <img src="img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Juguetes</h4>
-          <img src="img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Juguetes</h4>
-          <img src="img/carga.avif" alt="" />
-        </li>
-      </ul>
-      <hr />
-      <ul class="camas">
-        <li>
-          <h4>Camas y descansos</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Camas y descansos</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Camas y descansos</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Camas y descansos</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-      </ul>
+    <section>
+      <div class="scroll-container">
+    <h2>Alimentos</h2>
+    <article class="card">
+      <img class="content" src="assets/img/carga.avif" alt="">
+      <h2>nombre</h2>
+      <p class="price">precio</p>
+      <p class="desc">descripción</p>
+      <button>Comprar</button>
+      <button>Agregar al carrito</button>
+    </article>
+    <article class="card">
+      <img class="content" src="assets/img/carga.avif" alt="">
+      <h2>nombre</p>
+      <p class="price">precio</p>
+      <p class="desc">descripción</p>
+      <button>Comprar</button>
+      <button>Agregar al carrito</button>
+    </article>
+  </div>
+    </section>
+    <section class="juguetes">
+      <div class="scroll-container">
+      <h2>Juguetes</h2>
+      <article class="card">
+        <img class="content" src="assets/img/carga.avif" alt="">
+        <h2>nombre</h2>
+        <p class="price">precio</p>
+        <p class="desc">descripción</p>
+        <button>Comprar</button>
+        <button>Agregar al carrito</button>
+      </article>
+      <article class="card">
+        <img class="content" src="assets/img/carga.avif" alt="">
+        <h2>nombre</h2>
+        <p class="price">precio</p>
+        <p class="desc">descripción</p>
+        <button>Comprar</button>
+        <button>Agregar al carrito</button>
+      </article>
+    </div>
+    </section>
+    <section class="camas">
+      <div class="scroll-container">
+      <h2>Camas y descansos</h2>
+      <article class="card">
+        <img class="content" src="assets/img/carga.avif" alt="">
+        <h2>nombre</h2>
+        <p class="price">precio</p>
+        <p class="desc">descripción</p>
+        <button>Comprar</button>
+        <button>Agregar al carrito</button>
+      </article>
+      <article class="card">
+        <img class="content" src="assets/img/carga.avif" alt="">
+        <h2>nombre</h2>
+        <p class="price">precio</p>
+        <p class="desc">descripción</p>
+        <button>Comprar</button>
+        <button>Agregar al carrito</button>
+      </article>
+    </div>
+    </section>
 
       <section class="higiene">
         <div class="scroll-container">
-          <ul>
-            <li>
-              <h4>Higiene</h4>
-              <img src="assets/img/carga.avif" alt="" />
-            </li>
-            <li>
-              <h4>Higiene</h4>
-              <img src="assets/img/carga.avif" alt="" />
-            </li>
-            <li>
-              <h4>Higiene</h4>
-              <img src="assets/img/carga.avif" alt="" />
-            </li>
-            <li>
-              <h4>Higiene</h4>
-              <img src="assets/img/carga.avif" alt="" />
-            </li>
-            <li>
-              <h4>Higiene</h4>
-              <img src="assets/img/carga.avif" alt="" />
-            </li>
-            <li>
-              <h4>Higiene</h4>
-              <img src="assets/img/carga.avif" alt="" />
-            </li>
-          </ul>
+              <h2>Higiene</h2>
+              <article class="card">
+                <img class="content" src="assets/img/carga.avif" alt="">
+                <h2>nombre</h2>
+                <p class="price">precio</p>
+                <p class="desc">descripción</p>
+                <button>Comprar</button>
+                <button>Agregar al carrito</button>
+              </article>
+              <article class="card">
+                <img class="content" src="assets/img/carga.avif" alt="">
+                <h2>nombre</h2>
+                <p class="price">precio</p>
+                <p class="desc">descripción</p>
+                <button>Comprar</button>
+                <button>Agregar al carrito</button>
+              </article>
         </div>
       </section>
-      <ul class="accesorios">
-        <li>
-          <h4>Accesorios</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Accesorios</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Accesorios</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Accesorios</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-      </ul>
-      <ul>
+      <section class="accesorios">
+        <div class="scroll-container">
+        <h2>
+        Accesorios
+        </h2>
+        <article class="card">
+          <img class="content" src="assets/img/carga.avif" alt="">
+          <h2>nombre</h2>
+          <p class="price">precio</p>
+          <p class="desc">descripción</p>
+          <button>Comprar</button>
+          <button>Agregar al carrito</button>
+        </article>
+        <article class="card">
+          <img class="content" src="assets/img/carga.avif" alt="">
+          <h2>nombre</h2>
+          <p class="price">precio</p>
+          <p class="desc">descripción</p>
+          <button>Comprar</button>
+          <button>Agregar al carrito</button>
+        </article>
+      </div>
+      </section>
+      <section class="juguetes">
+        <div class="scroll-container">
         <h4>juguetes</h4>
-        <li>
-          <h4>juguetes</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-
-        <li>
-          <h4>juguetes</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-
-        <li>
-          <h4>juguetes</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-
-        <li>
-          <h4>juguetes</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-
-        <li>
-          <h4>juguetes</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-      </ul>
-      <ul class="Medicamentos">
-        <li><h4>Medicamentos</h4></li>
-        <li>
-          <h4>Medicamentos</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Medicamentos</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Medicamentos</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Medicamentos</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Medicamentos</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-      </ul>
-      <ul class="golosinas">
-        <h4>Golosinas</h4>
-        <li>
-          <h4>Golosinas</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Golosinas</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Golosinas</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Golosinas</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Golosinas</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Golosinas</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-        <li>
-          <h4>Golosinas</h4>
-          <img src="assets/img/carga.avif" alt="" />
-        </li>
-      </ul>
+        <article class="card">
+          <img src="assets/img/carga.avif" alt="">
+          <h2>nombre</h2>
+          <p class="price">precio</p>
+          <p class="desc">descripción</p>
+          <button>Comprar</button>
+          <button>Agregar al carrito</button>
+        </article>
+        <article class="card">
+          <img src="assets/img/carga.avif" alt="">
+          <h2>nombre</h2>
+          <p class="price">precio</p>
+          <p class="desc">descripción</p>
+          <button>Comprar</button>
+          <button>Agregar al carrito</button>
+        </article>
+      </div>
+      </section>
+      <section class="medicamentos">
+        <div class="scroll-container">
+        <h4>Medicamentos</h4>
+        <article class="card">
+          <img src="assets/img/carga.avif" alt="">
+          <h2>nombre</h2>
+          <p class="price">precio</p>
+          <p class="desc">descripción</p>
+          <button>Comprar</button>
+          <button>Agregar al carrito</button>
+        </article>
+        <article class="card">
+          <img src="assets/img/carga.avif" alt="">
+          <h2>nombre</h2>
+          <p class="price">precio</p>
+          <p class="desc">descripción</p>
+          <button>Comprar</button>
+          <button>Agregar al carrito</button>
+        </article>
+      </div>
+      </section>
+    <section class="golosinas">
+      <div class="scroll-container">
+      <h4>Golosinas</h4>
+      <article class="card">
+        <img src="assets/img/carga.avif" alt="">
+        <h2>nombre</h2>
+        <p class="price">precio</p>
+        <p class="desc">descripción</p>
+        <button>Comprar</button>
+        <button>Agregar al carrito</button>
+      </article>
+      <article class="card">
+        <img class="content" src="assets/img/carga.avif" alt="">
+        <h2>nombre</h2>
+        <p class="price">precio</p>
+        <p class="desc">descripción</p>
+        <button>Comprar</button>
+        <button>Agregar al carrito</button>
+      </article>
+    </div>
     </section>
 
     <footer>
