--- a/servicios.html
+++ b/servicios.html
@@ -30,94 +30,154 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="nosotros.html">Sobre nosotros</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="#">🛒</a></li>
         </ul>
       </nav>
     </header>
     <h1>Servicios</h1>
     <main class="grid">
-    <article class="card">
-      <h2>1. Baño completo</h2>
-      <div class="price">$48.000 – $80.000 COP</div>
-      <p class="desc">Servicio de shampoo especializado según tipo de piel, enjuague profundo, secado y cepillado. Ideal para que siempre tenga un olor agradable tú mascota.</p>
-      <div class="content">
-        <img src="assets/img/servicios/perro_ducha.png" alt="Perro bañandose con espuma">
-      </div>
-    </article>
-   
-    <article class="card">
-      <h2>2. Corte de pelo</h2>
-      <div class="price">$30.000 – $50.000 COP</div>
-      <p class="desc">Servicio de recorte o estilizado del pelaje según la raza o preferencia del dueño. Tu mascota se vera genial con mucho estilo. No incluye baño.</p>
-      <div class="content">
-        <img src="assets/img/servicios/corte_pelo.jpg" alt="Corte de pelo a un perro">
-      </div>
-    </article>
+      <article class="card">
+        <h2>1. Baño completo</h2>
+        <div class="price">$48.000 – $80.000 COP</div>
+        <p class="desc">
+          Servicio de shampoo especializado según tipo de piel, enjuague
+          profundo, secado y cepillado. Ideal para que siempre tenga un olor
+          agradable tú mascota.
+        </p>
+        <div class="content">
+          <img
+            src="assets/img/servicios/perro_ducha.png"
+            alt="Perro bañandose con espuma"
+          />
+        </div>
+      </article>
 
-    <article class="card">
-      <h2>3. Baño medicado</h2>
-      <div class="price">$40.000 – $60.000 COP</div>
-      <p class="desc">Uso de shampoo dermatológico para tratar piel sensible, alergias o irritaciones. Recomendado para mascotas en tratamiento veterinario.</p>
-      <div class="content">
-        <img src="assets/img/servicios/baño_medicado.jpg" alt="Baño a un perro con shampoo medicado">
-      </div>
-    </article>
+      <article class="card">
+        <h2>2. Corte de pelo</h2>
+        <div class="price">$30.000 – $50.000 COP</div>
+        <p class="desc">
+          Servicio de recorte o estilizado del pelaje según la raza o
+          preferencia del dueño. Tu mascota se vera genial con mucho estilo. No
+          incluye baño.
+        </p>
+        <div class="content">
+          <img
+            src="assets/img/servicios/corte_pelo.jpg"
+            alt="Corte de pelo a un perro"
+          />
+        </div>
+      </article>
 
-    <article class="card">
-      <h2>4. Desenredado y cepillado profundo</h2>
-      <div class="price">$40.000 – $72.000 COP</div>
-      <p class="desc">Eliminación de nudos, muda excesiva y enredos utilizando herramientas especializadas. Mantiene el pelaje sano y brillante.</p>
-      <div class="content">
-        <img src="assets/img/servicios/peinado_perro.jpg" alt="Peinando un perro">
-      </div>
-    </article>
+      <article class="card">
+        <h2>3. Baño medicado</h2>
+        <div class="price">$40.000 – $60.000 COP</div>
+        <p class="desc">
+          Uso de shampoo dermatológico para tratar piel sensible, alergias o
+          irritaciones. Recomendado para mascotas en tratamiento veterinario.
+        </p>
+        <div class="content">
+          <img
+            src="assets/img/servicios/baño_medicado.jpg"
+            alt="Baño a un perro con shampoo medicado"
+          />
+        </div>
+      </article>
 
-     <article class="card">
-      <h2>5. Corte de uñas</h2>
-      <div class="price">$15.000 – $30.000 COP</div>
-      <p class="desc">Recorte seguro y profesional de uñas para evitar molestias o heridas a las mascota.</p>
-      <div class="content">
-        <img src="assets/img/servicios/corte_uñas.jpg" alt="Cortandole las uñas a un gato">
-      </div>
-    </article>
- 
-    <article class="card">
-      <h2>6. Limpieza de oídos</h2>
-      <div class="price">$20.000</div>
-      <p class="desc">Remoción de suciedad y exceso de cera de forma segura con productos aptos para mascotas. Ayuda a prevenir infecciones.</p>
-      <div class="content">
-        <img src="assets/img/servicios/limpieza de oidos.jpeg" alt="Limpiando oidos de un perro">
-      </div>
-    </article>
+      <article class="card">
+        <h2>4. Desenredado y cepillado profundo</h2>
+        <div class="price">$40.000 – $72.000 COP</div>
+        <p class="desc">
+          Eliminación de nudos, muda excesiva y enredos utilizando herramientas
+          especializadas. Mantiene el pelaje sano y brillante.
+        </p>
+        <div class="content">
+          <img
+            src="assets/img/servicios/peinado_perro.jpg"
+            alt="Peinando un perro"
+          />
+        </div>
+      </article>
 
-    <article class="card">
-      <h2>7. Limpieza dental básica</h2>
-      <div class="price">$32.000</div>
-      <p class="desc">Cepillado dental con pasta especializada para reducir el mal aliento y la placa, se realiza de forma cuidadosa para no lastimarlos.</p>
-      <div class="content">
-        <img src="assets/img/servicios/limpeza dental.jpeg" alt="Lavando los dientes de un perro">
-      </div>
-    </article>
+      <article class="card">
+        <h2>5. Corte de uñas</h2>
+        <div class="price">$15.000 – $30.000 COP</div>
+        <p class="desc">
+          Recorte seguro y profesional de uñas para evitar molestias o heridas a
+          las mascota.
+        </p>
+        <div class="content">
+          <img
+            src="assets/img/servicios/corte_uñas.jpg"
+            alt="Contándole las uñas a un gato"
+          />
+        </div>
+      </article>
 
-    <article class="card">
-      <h2>8. Perfume y toque final</h2>
-      <div class="price">$12.000 – $24.000 COP</div>
-      <p class="desc">Aplicación de colonia suave y repaso final del pelaje para que la mascota salga con aroma fresco y sofisticado. </p>
-      <div class="content">
-        <img src="assets/img/servicios/perfume.jpeg" alt="Perro  con un perfume al lado">
-      </div>
-    </article>
+      <article class="card">
+        <h2>6. Limpieza de oídos</h2>
+        <div class="price">$20.000</div>
+        <p class="desc">
+          Remoción de suciedad y exceso de cera de forma segura con productos
+          aptos para mascotas. Ayuda a prevenir infecciones.
+        </p>
+        <div class="content">
+          <img
+            src="assets/img/servicios/limpieza de oidos.jpeg"
+            alt="Limpiando oídos de un perro"
+          />
+        </div>
+      </article>
 
-    <article class="card">
-      <h2>9. Paquete completo: Baño + Peluquería + Corte de uñas + Limpieza de oídos</h2>
-      <div class="price">$120.000 – $170.000 COP</div>
-      <p class="desc">
-        Este servicio integral incluye baño completo con shampoo especializado, corte de pelo según la raza o preferencia, recorte seguro de uñas y limpieza de oídos con productos aptos para mascotas. Ideal para un cuidado total en un solo momento y lugar.
-      </p>
-      <div class="content">
-        <img src="assets/img/servicios/peluqueria.jpeg" alt="Perro  con corbata">
-      </div>
-    </article>
-  </main>
+      <article class="card">
+        <h2>7. Limpieza dental básica</h2>
+        <div class="price">$32.000</div>
+        <p class="desc">
+          Cepillado dental con pasta especializada para reducir el mal aliento y
+          la placa, se realiza de forma cuidadosa para no lastimarlos.
+        </p>
+        <div class="content">
+          <img
+            src="assets/img/servicios/limpeza dental.jpeg"
+            alt="Lavando los dientes de un perro"
+          />
+        </div>
+      </article>
+
+      <article class="card">
+        <h2>8. Perfume y toque final</h2>
+        <div class="price">$12.000 – $24.000 COP</div>
+        <p class="desc">
+          Aplicación de colonia suave y repaso final del pelaje para que la
+          mascota salga con aroma fresco y sofisticado.
+        </p>
+        <div class="content">
+          <img
+            src="assets/img/servicios/perfume.jpeg"
+            alt="Perro  con un perfume al lado"
+          />
+        </div>
+      </article>
+
+      <article class="card">
+        <h2>
+          9. Paquete completo: Baño + Peluquería + Corte de uñas + Limpieza de
+          oídos
+        </h2>
+        <div class="price">$120.000 – $170.000 COP</div>
+        <p class="desc">
+          Este servicio integral incluye baño completo con shampoo
+          especializado, corte de pelo según la raza o preferencia, recorte
+          seguro de uñas y limpieza de oídos con productos aptos para mascotas.
+          Ideal para un cuidado total en un solo momento y lugar.
+        </p>
+        <div class="content">
+          <img
+            src="assets/img/servicios/peluqueria.jpeg"
+            alt="Perro  con corbata"
+          />
+        </div>
+      </article>
+    </main>
 
     <footer>
       <p>Derechos reservados © 2025</p>
