--- a/index.html
+++ b/index.html
@@ -30,22 +30,52 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="nosotros.html">Sobre nosotros</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="#">🛒</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <h1>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio harum
-        aspernatur, laudantium ratione repellendus nam explicabo inventore
-        soluta commodi mollitia, fugit aperiam ipsa quos possimus error,
-        adipisci quisquam quod velit?
-      </h1>
-      <section>
-        <h3>imagenes</h3>
-        <img src="img/imagen1.jpg" alt="" />
-        <img src="img/imagen2.jpg" alt="" />
-        <img src="img/imagen3.jpg" alt="" />
-      </section>
+      <h1>Todo para el cuidado y bienestar de tu mascota</h1>
+      <p>
+        Encuentra productos, servicios y consejos pensados para acompañarte en
+        cada etapa de la vida de tu mejor amigo.
+      </p>
+      <button>Ver productos</button>
+      <button>Conoce nuestro servicios</button>
+      <div class="que-ofrecemos">
+        <h2>¿que encontraras con nosotros?</h2>
+        <p>
+          Nos enfocamos en ofrecer soluciones practicas y confiables para el
+          cuidado diario de las mascotas, combinando calidad, variedad y
+          atención cercana.
+        </p>
+      </div>
+      <div class="destacados">
+        <h2>Productos destacados</h2>
+        <p>Nuestros productos destacados <br />
+        Seleccionamos pensados para la comodidad, salud y felicidad de tu mascota</p>
+        <div class="productos">
+          <div class="producto">
+            <img src="assets/img/producto1.avif" alt="Producto 1" />
+            <h3>Alimento Premium</h3>
+            <p>Nutrición completa para perros y gatos de todas las edades.</p>
+          </div>
+          <div class="producto">
+            <img src="assets/img/producto2.avif" alt="Producto 2" />
+            <h3>Juguetes Interactivos</h3>
+            <p>Estimula la mente y el cuerpo de tu mascota con diversión asegurada.</p>
+          </div>
+          <div class="producto">
+            <img src="assets/img/producto3.avif" alt="Producto 3" />
+            <h3>Camas Ergonómicas</h3>
+            <p>Comodidad y soporte para un descanso reparador.</p>
+          </div>
+      </div>
+      <div class="cita">
+      <quote>
+        "Cuidamos a quienes te acompañan todos los días"
+      </quote>
+      </div>
     </main>
     <footer>
       <p>Derechos reservados © 2025</p>
