--- a/adopcion.html
+++ b/adopcion.html
@@ -35,6 +35,158 @@
       </nav>
     </header>
     <h1>Adopción</h1>
+    <main>
+    <h2 class="Title-adop">ANIMATE A ADOPTAR</h2>
+    <section class="cards-adop">
+        <article class="card-adop">
+            <img src="assets/img/adopcion/honey.jpg" alt="Perruna Honey" class="card-img">
+
+                <div class="card-content">
+                    <h2>Honey</h2>
+
+                <div class="info">
+                    <div class="left">
+                        <p>Hembra</p>
+                        <p>Tamaño: Mediana</p>
+                        <p>Personalidad: Juguetona</p>
+                    </div>
+                    <div class="right">
+                        <p>Peso: 11 Kg</p>
+                        <p>Años: 10 años</p>
+                        <p>Ubicación: Bogotá</p>
+                    </div>
+                </div><br />
+                <button class="btn">Adoptar</button>
+            </div>
+        </article>
+        <article class="card-adop">
+            <img src="assets/img/adopcion/odin.jpg" alt="Perruno Odin" class="card-img">
+
+            <div class="card-content">
+                <h2>Odin</h2>
+
+                <div class="info">
+                    <div class="left">
+                        <p>Macho</p>
+                        <p>Tamaño: Grande</p>
+                        <p>Personalidad: Travieso</p>
+                    </div>
+                    <div class="right">
+                        <p>Peso: 22 Kg</p>
+                        <p>Años: 6 años</p>
+                        <p>Ubicación: Medellin</p>
+                    </div>
+                </div><br />
+                <button class="btn">Adoptar</button>
+            </div>
+        </article>
+        <article class="card-adop">
+            <img src="assets/img/adopcion/bingo.jpg" alt="Perruno Bingo" class="card-img">
+
+            <div class="card-content">
+                <h2>Bingo</h2>
+
+                <div class="info">
+                    <div class="left">
+                        <p>Macho</p>
+                        <p>Tamaño: Mediano</p>
+                        <p>Personalidad: Dormilon</p>
+                    </div>
+                    <div class="right">
+                        <p>Peso: 15 Kg</p>
+                        <p>Años: 8 años</p>
+                        <p>Ubicación: Barranquilla</p>
+                    </div>
+                </div> <br />
+                <button class="btn">Adoptar</button>
+            </div>
+        </article>
+        <article class="card-adop">
+            <img src="assets/img/adopcion/kira.jpg" alt="Gatita Kira" class="card-img">
+
+            <div class="card-content">
+                <h2>Kira</h2>
+
+                <div class="info">
+                    <div class="left">
+                        <p>Hembra</p>
+                        <p>Tamaño: Mediana</p>
+                        <p>Personalidad: Comelona</p>
+                    </div>
+                    <div class="right">
+                        <p>Peso: 8 Kg</p>
+                        <p>Años: 3 años</p>
+                        <p>Ubicación: Cali</p>
+                    </div>
+                </div><br />
+                <button class="btn">Adoptar</button>
+            </div>
+        </article>
+        <article class="card-adop">
+            <img src="assets/img/adopcion/rio.jpg" alt="Gatito Rio" class="card-img">
+
+            <div class="card-content">
+                <h2>Rio</h2>
+
+                <div class="info">
+                    <div class="left">
+                        <p>Macho</p>
+                        <p>Tamaño: Mediano</p>
+                        <p>Personalidad: Afectuoso</p>
+                    </div>
+                    <div class="right">
+                        <p>Peso: 12 Kg</p>
+                        <p>Años: 7 años</p>
+                        <p>Ubicación: Barranquilla</p>
+                    </div>
+                </div><br />
+                <button class="btn">Adoptar</button>
+            </div>
+        </article>
+        <article class="card-adop">
+            <img src="assets/img/adopcion/maya.jpg" alt="Perruna Maya" class="card-img">
+
+            <div class="card-content">
+                <h2>Maya</h2>
+
+                <div class="info">
+                    <div class="left">
+                        <p>Hembra</p>
+                        <p>Tamaño: Pequeña</p>
+                        <p>Personalidad: Tranquila</p>
+                    </div>
+                    <div class="right">
+                        <p>Peso: 11 Kg</p>
+                        <p>Años: 4 años</p>
+                        <p>Ubicación: Bogotá</p>
+                    </div>
+                </div><br />
+                <button class="btn">Adoptar</button>
+            </div>
+        </article>
+        <article class="card-adop">
+            <img src="assets/img/adopcion/zeus.jpg" alt="Perruno Zeus" class="card-img">
+
+            <div class="card-content">
+                <h2>Zeus</h2>
+
+                <div class="info">
+                    <div class="left">
+                        <p>Macho</p>
+                        <p>Tamaño: Grande</p>
+                        <p>Personalidad: Gruñon</p>
+                    </div>
+                    <div class="right">
+                        <p>Peso: 29 Kg</p>
+                        <p>Años: 6 años</p>
+                        <p>Ubicación: Bucaramanga</p>
+                    </div>
+                </div><br />
+                <button class="btn">Adoptar</button>
+            </div>
+        </article>
+    </section>
+    </main>
     <footer>
       <p>Derechos reservados © 2025</p>
     </footer>
