edicion del archivo css

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
       </p>
       <button>Ver productos</button>
       <button>Conoce nuestro servicios</button>
+      <div class="container">
+        <img src="assets/img/carga.avif" />
+        <img src="assets/img/carga.avif" />
+        <img src="assets/img/carga.avif" />
+        <img src="assets/img/carga.avif" />
+        <img src="assets/img/carga.avif" />
+      </div>
       <div class="que-ofrecemos">
         <h2>¿que encontraras con nosotros?</h2>
         <p>
@@ -52,8 +59,11 @@
       </div>
       <div class="destacados">
         <h2>Productos destacados</h2>
-        <p>Nuestros productos destacados <br />
-        Seleccionamos pensados para la comodidad, salud y felicidad de tu mascota</p>
+        <p>
+          Nuestros productos destacados <br />
+          Seleccionamos pensados para la comodidad, salud y felicidad de tu
+          mascota
+        </p>
         <div class="productos">
           <div class="producto">
             <img src="assets/img/producto1.avif" alt="Producto 1" />
@@ -63,18 +73,19 @@
           <div class="producto">
             <img src="assets/img/producto2.avif" alt="Producto 2" />
             <h3>Juguetes Interactivos</h3>
-            <p>Estimula la mente y el cuerpo de tu mascota con diversión asegurada.</p>
+            <p>
+              Estimula la mente y el cuerpo de tu mascota con diversión
+              asegurada.
+            </p>
           </div>
           <div class="producto">
             <img src="assets/img/producto3.avif" alt="Producto 3" />
             <h3>Camas Ergonómicas</h3>
             <p>Comodidad y soporte para un descanso reparador.</p>
           </div>
-      </div>
+        </div>
       <div class="cita">
-      <quote>
-        "Cuidamos a quienes te acompañan todos los días"
-      </quote>
+        <quote> "Cuidamos a quienes te acompañan todos los días" </quote>
       </div>
     </main>
     <footer>
