mejora de diseño y comentarios en codigo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <title>Document</title>
   </head>
-  <body>
+  <body >
     <header class="menu">
       <nav>
         <ul>
@@ -35,59 +35,21 @@
       </nav>
     </header>
     <main>
-      <h1>Todo para el cuidado y bienestar de tu mascota</h1>
+  <section class="hero" >
+    <div class="hero-content">
+      <h1>Bienvenido a PetShot</h1>
       <p>
-        Encuentra productos, servicios y consejos pensados para acompañarte en
-        cada etapa de la vida de tu mejor amigo.
+        Cuidamos, consentimos y acompañamos a tu mascota con productos y
+        servicios pensados para su bienestar.
       </p>
-      <button>Ver productos</button>
-      <button>Conoce nuestro servicios</button>
-      <div class="container">
-        <img src="assets/img/carga.avif" />
-        <img src="assets/img/carga.avif" />
-        <img src="assets/img/carga.avif" />
-        <img src="assets/img/carga.avif" />
-        <img src="assets/img/carga.avif" />
+
+      <div class="hero-buttons">
+        <a href="productos.html" class="btn primary">Ver productos</a>
+        <a href="servicios.html" class="btn secondary">Conocer servicios</a>
       </div>
-      <div class="que-ofrecemos">
-        <h2>¿que encontraras con nosotros?</h2>
-        <p>
-          Nos enfocamos en ofrecer soluciones practicas y confiables para el
-          cuidado diario de las mascotas, combinando calidad, variedad y
-          atención cercana.
-        </p>
-      </div>
-      <div class="destacados">
-        <h2>Productos destacados</h2>
-        <p>
-          Nuestros productos destacados <br />
-          Seleccionamos pensados para la comodidad, salud y felicidad de tu
-          mascota
-        </p>
-        <div class="productos">
-          <div class="producto">
-            <img src="assets/img/producto1.avif" alt="Producto 1" />
-            <h3>Alimento Premium</h3>
-            <p>Nutrición completa para perros y gatos de todas las edades.</p>
-          </div>
-          <div class="producto">
-            <img src="assets/img/producto2.avif" alt="Producto 2" />
-            <h3>Juguetes Interactivos</h3>
-            <p>
-              Estimula la mente y el cuerpo de tu mascota con diversión
-              asegurada.
-            </p>
-          </div>
-          <div class="producto">
-            <img src="assets/img/producto3.avif" alt="Producto 3" />
-            <h3>Camas Ergonómicas</h3>
-            <p>Comodidad y soporte para un descanso reparador.</p>
-          </div>
-        </div>
-      <div class="cita">
-        <quote> "Cuidamos a quienes te acompañan todos los días" </quote>
-      </div>
-    </main>
+    </div>
+  </section>
+</main>
     <footer>
       <p>Derechos reservados © 2025</p>
     </footer>
