--- a/contacto.html
+++ b/contacto.html
@@ -34,6 +34,7 @@
         </ul>
       </nav>
     </header>
+    <main class="hero">
     <h2>Contacto</h2>
     <section class="contacto">
       <p>
@@ -54,7 +55,7 @@
         <li><strong>Ubicación:</strong>Colombia</li>
       </ul>
     </section>
-
+  </main>
     <footer>
       <p>Derechos reservados © 2025</p>
     </footer>
