--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
       </nav>
     </header>
     <main>
-  <section class="hero" >
-    <div class="hero-content">
+  <section class="inicio" >
+    <div class="contenido-inicio">
       <h1>Bienvenido a PetShot</h1>
       <p>
         Cuidamos, consentimos y acompañamos a tu mascota con productos y
         servicios pensados para su bienestar.
       </p>
 
-      <div class="hero-buttons">
+      <div class="botones-inicio">
         <a href="productos.html" class="btn primary">Ver productos</a>
         <a href="servicios.html" class="btn secondary">Conocer servicios</a>
       </div>
