--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section class="inicio" >
     <div class="contenido-inicio">
       <h1>Bienvenido a PetShot</h1>
-      <p>
+      <p class="mensaje">
         Cuidamos, consentimos y acompañamos a tu mascota con productos y
         servicios pensados para su bienestar.
       </p>
